fixed links visual on mobile view

--- a/styles/base.sass
+++ b/styles/base.sass
@@ -132,6 +132,7 @@ h3
     cursor: pointer
   .search-display-legend
     position: absolute
+    left: 10px
     cursor: pointer
     text-decoration: underline
     font-style: italic
@@ -397,6 +398,17 @@ h3
 .links
   display: none
   margin-bottom: 15px
+  p
+    margin-top: 15px
+    margin-bottom: 5px
+    display: block
+    width: 100%
+  a
+    margin-bottom: 10px
+    display: block
+    width: 100%
+    color: $perks
+    text-decoration: underline
 
 @media (min-width: 992px)
   .links
@@ -408,6 +420,11 @@ h3
       line-height: 15px
       font-size: 12px
       font-weight: 500
+    p
+      display: block
+      width: 100%
     a
+      display: block
+      width: 100%
       color: $perks
       text-decoration: underline
